# kokkos-cgg-stencil

./: .clang-format  .gitignore  CMakeLists.txt  README.md
refs/: CMakeLists.txt  Makefile  stencil.cxx
src/: main.cpp
